dev-ops/express-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-test
spec:
  selector:
    matchLabels:
      app: express-test
  template:
    metadata:
      labels:
        app: express-test
    spec:
      containers:
      - name: express-test
        image: localhost:5000/express-test
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: express-test
spec:
  selector:
    app: express-test
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 30100
