dev-ops/ingress copy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    name: api-ingress
spec:
  rules:
  - host: nginx.bartersmarter.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80
  - host: express-test.bartersmarter.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: express-test
            port: 
              number: 3000
  - host: echo.bartersmarter.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echoserver
            port: 
              number: 8080
