dev-ops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: api-ingress
  labels:
    name: api-ingress
spec:
  rules:
  - host: api.bartersmarter.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80
      - pathType: Prefix
        path: "/echo"
        backend:
          service:
            name: echoserver
            port: 
              number: 8080
      - pathType: Prefix
        path: "/express-test"
        backend:
          service:
            name: express-test
            port: 
              number: 3000
